# MySQL_connection

./: CMakeLists.txt  README.md  main.cpp  mysql_connection.conf
include/: connection.hpp  connectionPool.hpp  public.hpp
src/: connection.cpp  connectionPool.cpp
